# evolutionary

data/: small_12.csv
ga_tsp/: PROJECT_SUMMARY.md  README.md  pyproject.toml
ga_tsp/data/: medium_50.csv
ga_tsp/outputs/: best_tour_medium_50.csv  best_tour_small_12.csv
ga_tsp/src/ga_tsp/: __init__.py  baseline.py  brute_force.py  cli.py  ga.py  operators.py  tsp.py  utils.py  viz.py
ga_tsp/src/ga_tsp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ga_tsp/tests/: test_baseline_vs_ga.py  test_integration_small.py  test_operators.py  test_tsp_core.py
outputs/: optimal_tour_small_12.csv
